@startuml
abstract class "ReputableTellResponseHandlerBase`4"<TProto,TReputableCache,TRequest,TResponse> {
    + ReputableCache : TReputableCache <<get>>
    # ReputableTellResponseHandlerBase(reputableCache:TReputableCache, logger:ILogger)
    # <<override>> Handler(message:IChanneledMessage<AnySigned>) : void
}
class "CorrelatableMessageHandlerBase`2"<T1,T2> {
}
class "IReputationAskHandler`1"<T> {
}
class "IMessage`1"<T> {
}
"CorrelatableMessageHandlerBase`2" "<TProto,TReputableCache>" <|-- "ReputableTellResponseHandlerBase`4"
"IReputationAskHandler`1" "<TReputableCache>" <|-- "ReputableTellResponseHandlerBase`4"
@enduml
